Migrate some files from master.

--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -6,7 +6,56 @@ img: cabin.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
-
+category: House Renovation
 ---
+
+We provide house renovation works from kitchen top, bar counter, until flooring and including installation.
+
+## Kitchen Top
+Most of the kitchentop today is divided into dry & wet kitchen. Dry kitchen purposely design for light usage while wet kitchen is used to purposely cook which need more case.
+
+![Kitchentop](/img/kitchentop.jpg)
+
+![Kitchentop2](/img/kitchentop2.jpg)
+
+![Kitchentop3](/img/kitchentop3.jpg)
+
+![Kitchentop4](/img/kitchentop4.jpg)
+
+![Kitchentop4b](/img/kitchentop4b.jpg)
+
+![Kitchentop5](/img/kitchentop5.jpg)
+
+![Kitchentop6](/img/kitchentop6.jpg)
+
+![Kitchentop7](/img/kitchentop7.jpg)
+
+![Kitchentop8](/img/kitchentop8.jpg)
+
+![Kitchentop9](/img/kitchentop9.jpg)
+
+## Bar Counter
+Only kitchen is not suit the lifestyle people nowadays. A bar counter is needed to place more drink and uses to serve your friend.
+
+![Barcounter](/img/barcounter.jpg)
+
+## Kitchen Island
+Kitchen island can uses as dinning table or uses as table to place food before or after cook.
+
+![island](/img/island.jpg)
+
+## Basin Top
+Enhanced only by a single granite basin, this bathroom still look great.
+
+![Basintop](/img/basintop.jpg)
+
+Sink today is not fixed use only metal but also granite. A single granite sink make the design look grand.
+
+![Basintop2](/img/basintop2.jpg)
+
+## Staircases
+The most important feature for a staircases is to link downstairs with upstairs. A comfort stair is designs for comfort living. With the right matching of different granite, staircases is no longer a dull design.
+
+![Staircase](/img/staircase.jpg)
+
+![Staircase2](/img/staircase2.jpg)
