Rename extension JPG to jpg.

--- a/_posts/2014-07-13-nisan.markdown
+++ b/_posts/2014-07-13-nisan.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 6
 date: 2014-07-15
-img: submarine.png
-alt: image-alt
+img: nisan.png
+alt: Batu Nisan
 project-date: April 2014
 client: Start Bootstrap
 category: Tomb Batu Nisan
@@ -21,22 +21,22 @@ description: There are 4 types of Batu Nisan - Batu Batik, Batu Putih, Batu Hita
 ![Batu Putih(L)](/img/BatuPutih20L.JPG)
 
 ### Batu Putih(P)
-![Batu Putih(P)](/img/BatuPutih20P.JPG)
+![Batu Putih(P)](/img/BatuPutih20P.jpg)
 
 ### Batu Hitam(L)
-![Batu Hitam(L)](/img/BatuHitam20L.JPG)
+![Batu Hitam(L)](/img/BatuHitam20L.jpg)
 
 ### Batu Hitam(P)
-![Batu Hitam(P)](/img/BatuHitam20P.JPG)
+![Batu Hitam(P)](/img/BatuHitam20P.jpg)
 
 ### Batu Hijau(L)
-![Batu Hijau(L)](/img/BatuHijau20L.JPG)
+![Batu Hijau(L)](/img/BatuHijau20L.jpg)
 
 ### Batu Hijau(P)
-![Batu Hijau(P)](/img/BatuHijau20P.JPG)
+![Batu Hijau(P)](/img/BatuHijau20P.jpg)
 
 ### Batu Batik Segi
-![Segit Batik](/img/SegiBatik20.JPG)
+![Segit Batik](/img/SegiBatik20.jpg)
 
 ### Batu Hitam Segi
-![Segit Hitam](/img/SegiHitam20.JPG)
+![Segit Hitam](/img/SegiHitam20.jpg)
