Show tooltips when mouseover catalog.

--- a/_posts/2014-07-15-quartz.markdown
+++ b/_posts/2014-07-15-quartz.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 4
 date: 2014-07-15
-img: game.png
-alt: image-alt
+img: quartz.png
+alt: quartz stone
 project-date: April 2014
 client: Start Bootstrap
 category: Quartz
