--- a/_posts/2014-07-14-buddha.markdown
+++ b/_posts/2014-07-14-buddha.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 5
 date: 2014-07-14
-img: safe.png
-alt: image-alt
+img: buddha.png
+alt: Buddha Plate
 project-date: April 2014
 client: Start Bootstrap
 category: House Buddha Plate
