--- a/_posts/2014-07-16-marble.markdown
+++ b/_posts/2014-07-16-marble.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 3
 date: 2014-07-16
-img: circus.png
-alt: image-alt
+img: marble.png
+alt: marble
 project-date: April 2014
 client: Start Bootstrap
 category: Marble
