--- a/_posts/2014-07-17-granite.markdown
+++ b/_posts/2014-07-17-granite.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 2
 date: 2014-07-17
-img: cake.png
-alt: image-alt
+img: granite.png
+alt: granite
 project-date: April 2014
 client: Start Bootstrap
 category: Granite
