--- a/_posts/2015-01-01-fengshui.markdown
+++ b/_posts/2015-01-01-fengshui.markdown
@@ -3,7 +3,7 @@ layout: default
 modal-id: 7
 date: 2015-01-01
 img: circus.png
-alt: image-alt
+alt: fengshui
 project-date: January 2014
 client: Start Bootstrap
 category: Tomb Chinese Fengshui
