--- a/_posts/2014-07-13-nisan.markdown
+++ b/_posts/2014-07-13-nisan.markdown
@@ -24,16 +24,16 @@ description: There are 4 types of Batu Nisan - Batu Batik, Batu Putih, Batu Hita
 ![Batu Putih(P)](/img/BatuPutih20P.jpg)
 
 ### Batu Hitam(L)
-![Batu Hitam(L)](/img/BatuHitam20L.jpg)
+![Batu Hitam(L)](/img/BatuHitam20L.JPG)
 
 ### Batu Hitam(P)
-![Batu Hitam(P)](/img/BatuHitam20P.jpg)
+![Batu Hitam(P)](/img/BatuHitam20P.JPG)
 
 ### Batu Hijau(L)
 ![Batu Hijau(L)](/img/BatuHijau20L.jpg)
 
 ### Batu Hijau(P)
-![Batu Hijau(P)](/img/BatuHijau20P.jpg)
+![Batu Hijau(P)](/img/BatuHijau20P.JPG)
 
 ### Batu Batik Segi
 ![Segit Batik](/img/SegiBatik20.jpg)
